WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99852
Gstreamer 1.0 not working
https://bugs.webkit.org/show_bug.cgi?id=99852
Summary
Gstreamer 1.0 not working
Nicolas Dufresne
Reported
2012-10-19 10:16:17 PDT
Gstreamer 1.0 not working
Attachments
Patch
(3.49 KB, patch)
2012-10-19 10:22 PDT
,
Nicolas Dufresne
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nicolas Dufresne
Comment 1
2012-10-19 10:22:40 PDT
Created
attachment 169644
[details]
Patch
Alexis Menard (darktears)
Comment 2
2012-10-19 10:27:54 PDT
Comment on
attachment 169644
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=169644&action=review
> Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.cpp:-91 > - ASSERT(!ptr || !gstObjectIsFloating(GST_OBJECT(ptr)));
You should not get rid of the entire assert no? Testing pointer nullity is still valid to me.
Philippe Normand
Comment 3
2012-10-19 10:42:15 PDT
Comment on
attachment 169644
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=169644&action=review
>> Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.cpp:-91 >> - ASSERT(!ptr || !gstObjectIsFloating(GST_OBJECT(ptr))); > > You should not get rid of the entire assert no? Testing pointer nullity is still valid to me.
+1
> Source/WebCore/platform/graphics/gstreamer/GStreamerVersioning.cpp:-46 > - GstCaps* caps = gst_pad_get_current_caps(pad); > - if (!caps) > - caps = gst_pad_query_caps(pad, 0); > - return adoptGRef(caps); // gst_pad_query_caps and gst_pad_get_current_caps return a new reference.
gst_pad_get_current_caps() can return NULL AFAIK. What should we do in that case instead of querying the caps to the pad?
Nicolas Dufresne
Comment 4
2012-10-19 11:12:33 PDT
(In reply to
comment #3
)
> (From update of
attachment 169644
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=169644&action=review
> > >> Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.cpp:-91 > >> - ASSERT(!ptr || !gstObjectIsFloating(GST_OBJECT(ptr))); > > > > You should not get rid of the entire assert no? Testing pointer nullity is still valid to me. > > +1
ok.
> > > Source/WebCore/platform/graphics/gstreamer/GStreamerVersioning.cpp:-46 > > - GstCaps* caps = gst_pad_get_current_caps(pad); > > - if (!caps) > > - caps = gst_pad_query_caps(pad, 0); > > - return adoptGRef(caps); // gst_pad_query_caps and gst_pad_get_current_caps return a new reference. > > gst_pad_get_current_caps() can return NULL AFAIK. What should we do in that case instead of querying the caps to the pad?
Nothing, 0.10 GST_PAD_CAPS() macro you can also return NULL and this is handled gracefully by callers (by not painting).
Nicolas Dufresne
Comment 5
2012-10-19 11:16:10 PDT
(In reply to
comment #4
)
> (In reply to
comment #3
) > > (From update of
attachment 169644
[details]
[details]) > > View in context:
https://bugs.webkit.org/attachment.cgi?id=169644&action=review
> > > > >> Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.cpp:-91 > > >> - ASSERT(!ptr || !gstObjectIsFloating(GST_OBJECT(ptr))); > > > > > > You should not get rid of the entire assert no? Testing pointer nullity is still valid to me. > > > > +1 > > ok. >
Sorry I answered too fast. No the !ptr check is not valid, this is a OR. It is there only to prevent calling GST_OBJECT() with a NULL pointer. It's totally fine to store NULL in the GRefPtr.
Philippe Normand
Comment 6
2012-10-19 12:16:07 PDT
Thank you Nicolas! Hopefully we'll turn gst-1.0 build support soon in the build-webkit.
Philippe Normand
Comment 7
2012-10-21 23:08:14 PDT
If you're not committer yet please set the cq? flag so the commit-queue takes care of it.
Nicolas Dufresne
Comment 8
2012-10-22 09:19:26 PDT
(In reply to
comment #7
)
> If you're not committer yet please set the cq? flag so the commit-queue takes care of it.
Sorry I forgot. Done.
WebKit Review Bot
Comment 9
2012-10-22 09:22:27 PDT
Comment on
attachment 169644
[details]
Patch Rejecting
attachment 169644
[details]
from commit-queue.
nicolas.dufresne@collabora.co.uk
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Nicolas Dufresne
Comment 10
2012-10-22 09:28:30 PDT
(In reply to
comment #9
)
> (From update of
attachment 169644
[details]
) > Rejecting
attachment 169644
[details]
from commit-queue. > >
nicolas.dufresne@collabora.co.uk
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. > > - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. > > - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Sorry again, selected the wrong option, hopefully setting it to ? now is enough.
Philippe Normand
Comment 11
2012-10-22 09:28:45 PDT
Comment on
attachment 169644
[details]
Patch I did set it to cq+ ...
WebKit Review Bot
Comment 12
2012-10-22 09:44:38 PDT
Comment on
attachment 169644
[details]
Patch Clearing flags on attachment: 169644 Committed
r132081
: <
http://trac.webkit.org/changeset/132081
>
WebKit Review Bot
Comment 13
2012-10-22 09:44:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug