Gstreamer 1.0 not working https://bugs.webkit.org/show_bug.cgi?id=99852

Patch by Nicolas Dufresne <nicolas.dufresne@collabora.com> on 2012-10-22
Reviewed by Philippe Normand.

There was a series of trivial issue, g_object_is_floating() was called
on type GstCaps (which is not a GObject), webkitGstGetPadCaps() was
returning non-fixed caps and GST_MESSAGE_DURATION has been renamed
to GST_MESSAGE_DURATION_CHANGED.

Most failing test passes now.

* platform/graphics/gstreamer/GRefPtrGStreamer.cpp:
(WTF::adoptGRef):
* platform/graphics/gstreamer/GStreamerVersioning.cpp:
(webkitGstGetPadCaps):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::handleMessage):

Canonical link: https://commits.webkit.org/118014@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132081 268f45cc-cd09-0410-ab3c-d52691b4dbfc